# pi-pico-c-console

./: .screenrc  CMakeLists.txt  README.md  command.c  command.h  main.c  pi-pico-console.fzz  screencast_usb_console.webm  screencast_usb_uart_console.webm
